fix: prevent text overflow

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -64,6 +64,8 @@ input {
 .topItem {
 	margin: 15px;
 	font-size: 23px;
+	white-space: normal;
+    word-wrap: break-word;
 }
 
 .row {
